3.11.1
======
Apr 20, 2022
- Add video, attachments, and error message to HTML report summary lines
- Use SVG instead of PNG Gwen logo image in HTML reports
- Support CSV data interpolation in feature name and description

3.11.0
======
Apr 19, 2022
- Add DSL's to support text similarity checks using the DSC (Dice Similarity Coefficient) algorithm:
  - `<textRef> should[ not] <be|be less than|be at most|be more than|be at least> <percentage>% similar to "<text>"[ ignoring case]`
  - `<textRef1> should[ not] <be|be less than|be at most|be more than|be at least> <percentage>% similar to <textRef2>[ ignoring case]`
  - `I capture the similarity score of <textRef> compared to "<text>"[ ignoring case] as <name>`
  - `I capture the similarity score of <textRef1> compared to <textRef2>[ ignoring case] as <name>`
  - `I capture the similarity score of <textRef> compared to "<text>"[ ignoring case]`
  - `I capture the similarity score of <textRef1> compared to <textRef2>[ ignoring case]`

3.10.2
======
Apr 7, 2022
- Fix: include attachments of ignored steps in reports

3.10.1
======
Apr 6, 2022
- Add duration to `Ignored` status and render ignored stepdef links in grey
- Change CSV record number label suffix from ' (plus input data record n)' to ' + Input data record n'

3.10.0
======
Apr 6, 2022
- Introduced `@Try` annotation and `Ignored` status
  - Steps annotated with `@Try` that fail will be reported as `Ignored`
- Fix: Accept blank arguments into JS function application bindings

3.9.1
=====
Apr 5, 2022
- JS function application binding without delimiter takes single argument only
  - `<name> is defined by <javascriptRef> applied to "<argument>"`

3.9.0
=====
Apr 5, 2022
- JS function application bindings
  - `<name> is defined by <javascriptRef> applied to "<arguments>"`
  - `<name> is defined by <javascriptRef> applied to "<arguments>" delimited by "<delimiter>"`

3.8.1
=====
Apr 4, 2022
- Fix `@Lazy` bindings for if conditions

3.8.0
=====
Apr 3, 2022